--- a/style.css
+++ b/style.css
@@ -20,17 +20,19 @@ body {
   margin-bottom: 25px;
 }
 
-/* Loader */
+
 .loader {
   background: whitesmoke;
   height: 100vh;
   width: 100vw;
+  position: fixed;
+  z-index: 10;
   display: flex;
   justify-content: center;
   align-items: center;
 }
 
-/* Navigation */
+
 .navigation-container {
   position: fixed;
   top: 0;
@@ -47,15 +49,26 @@ body {
   right: 0;
   width: 100%;
   height: 60px;
-
+  z-index: -1;
 }
 
 
-/* Images Container */
+.clickable {
+  color: dodgerblue;
+  cursor: pointer;
+  user-select: none;
+}
+
+.clickable:hover {
+  color: blue;
+}
+
+
 .images-container {
 
   margin-top: 50px;
 }
+
 
 .card {
   background: white;
@@ -64,6 +77,7 @@ body {
   box-shadow: 0 4px 8px 0 rgba(0, 0, 0, 0.2);
   transition: 0.3s;
 }
+
 
 .card:hover {
   box-shadow: 0 8px 16px 0 rgba(0, 0, 0, 0.2);
@@ -82,7 +96,6 @@ body {
 
 
 
-/* Save Confirmation */
 .save-confirmed {
   background: white;
   padding: 8px 16px;
@@ -94,12 +107,12 @@ body {
   right: 50px;
 }
 
-/* Hidden */
+
 .hidden {
   display: none;
 }
 
-/* Large Smartphone (Vertical) */
+
 @media screen and (max-width: 800px) {
   body {
     line-height: 1.4rem;
