--- a/style.css
+++ b/style.css
@@ -20,7 +20,6 @@ body {
   margin-bottom: 25px;
 }
 
-
 .loader {
   background: whitesmoke;
   height: 100vh;
@@ -31,7 +30,6 @@ body {
   justify-content: center;
   align-items: center;
 }
-
 
 .navigation-container {
   position: fixed;
@@ -52,7 +50,6 @@ body {
   z-index: -1;
 }
 
-
 .clickable {
   color: dodgerblue;
   cursor: pointer;
@@ -63,12 +60,10 @@ body {
   color: blue;
 }
 
-
 .images-container {
   width: 800px;
   margin-top: 50px;
 }
-
 
 .card {
   background: white;
@@ -84,7 +79,7 @@ body {
 }
 
 .card-img-top {
-  margin-top: 100%;
+  width: 100%;
   height: auto;
   border-radius: 5px 5px 0 0;
 }
@@ -98,8 +93,6 @@ body {
   font-size: 24px;
 }
 
-
-
 .save-confirmed {
   background: white;
   padding: 8px 16px;
@@ -110,7 +103,6 @@ body {
   bottom: 25px;
   right: 50px;
 }
-
 
 .hidden {
   display: none;
